force-app/main/default/objects/Referenceable_Clients__c/Referenceable_Clients__c.object-meta.xml
<CustomObject>
    <description>Used to indicate if a contact with a specific account is willing to speak to a different client about the topic highlighted.</description>
    <label>Referenceable Clients</label>
    <nameField>
        <displayFormat>ATC-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referenceable Clients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>