force-app/main/default/objects/Referenceable_Clients__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referenceable Clients</relationshipLabel>
    <relationshipName>Referenceable_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>