force-app/main/default/objects/Referenceable_Clients__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Used for additional notes or comments to consider about this contact.</description>
    <inlineHelpText>Used for additional notes or comments to consider about this contact.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>