force-app/main/default/objects/Referenceable_Clients__c/fields/Referenceable_Services__c.field-meta.xml
<CustomField>
    <fullName>Referenceable_Services__c</fullName>
    <description>Which Service(s) a Client is willing to speak to.</description>
    <inlineHelpText>Which Service(s) a Client is willing to speak to.</inlineHelpText>
    <label>Referenceable Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADKAR Enablement License</fullName>
            </value>
            <value>
                <fullName>Advanced Deployment Leader Track</fullName>
            </value>
            <value>
                <fullName>Advanced Instructor Track</fullName>
            </value>
            <value>
                <fullName>Advanced Practitioner Track</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>All Access Portal Subscription</fullName>
            </value>
            <value>
                <fullName>Certification Program</fullName>
            </value>
            <value>
                <fullName>Change Management Deployment Support</fullName>
            </value>
            <value>
                <fullName>Change Management Project Support</fullName>
            </value>
            <value>
                <fullName>Change Portfolio Workshop</fullName>
            </value>
            <value>
                <fullName>Change Scorecard Workshop</fullName>
            </value>
            <value>
                <fullName>Delivering Project Results</fullName>
            </value>
            <value>
                <fullName>ECM Bootcamp</fullName>
            </value>
            <value>
                <fullName>ECM License</fullName>
            </value>
            <value>
                <fullName>eLearning</fullName>
            </value>
            <value>
                <fullName>Employee Program</fullName>
            </value>
            <value>
                <fullName>Enterprise Engagements</fullName>
            </value>
            <value>
                <fullName>Fundamentals Program</fullName>
            </value>
            <value>
                <fullName>Integrating Agile Workshop</fullName>
            </value>
            <value>
                <fullName>Managers Program</fullName>
            </value>
            <value>
                <fullName>OCC License</fullName>
            </value>
            <value>
                <fullName>Onsite Training</fullName>
            </value>
            <value>
                <fullName>Speaking Engagement</fullName>
            </value>
            <value>
                <fullName>Sponsor Program</fullName>
            </value>
            <value>
                <fullName>Strategic Alignment Workshop</fullName>
            </value>
            <value>
                <fullName>Train the Trainer</fullName>
            </value>
            <value>
                <fullName>Virtual Coaching for Practitioners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>